Fix show replyBox on safari

--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -124,3 +124,7 @@ label {
   display: flex !important;
   align-items: center;
 }
+
+.left-side-menu { 
+  z-index: 1021!important;
+}
